Last changes for the final project
