# controllers/supplier.js
@@ -1,17 +1,16 @@
 const db = require('../models');
-const supplier = db.supplier;
+const Supplier = db.supplier;
 
 exports.createSupplier = (req, res) => {
     const supplier = new Supplier(req.body);
     supplier
       .save()
       .then((data) => {
-        console.log(data);
         res.status(201).send(data);
       })
       .catch((err) => {
         res.status(500).send({
-          message: err.message || 'Some error occurred while creating the user.'
+          message: err.message || 'Some error occurred while creating the supplier.'
         });
       });
 };
@@ -23,14 +22,14 @@ exports.getAll = (req, res) => {
       })
       .catch((err) => {
         res.status(500).send({
-          message: err.message || 'Some error occurred while retrieving users.'
+          message: err.message || 'Some error occurred while retrieving suppliers.'
         });
       });
 };
 
 exports.getSupplier = (req, res) => {
-    const supplierName = new ObjectId(req.params.supplierName);
-    Supplier.find({ status: officeName })
+    const supplierName = req.params.supplierName;
+    Supplier.find({ supplierName: supplierName })
       .then((data) => {
         if (data.length> 0){
           res.status(200).send(data);
@@ -40,7 +39,55 @@ exports.getSupplier = (req, res) => {
       })
       .catch((err) => {
         res.status(500).send({
-          message: err.message || 'Some error occurred while retrieving users.'
+          message: err.message || 'Some error occurred while retrieving suppliers.'
         });
       });
+};
+
+exports.updateSupplier = async (req, res) => {
+  try{
+    const supplierName = req.params.supplierName;
+    if (!supplierName) {
+      res.status(400).send({ message: 'Invalid Supplier Name' });
+      return;
+    }
+    const update = {
+      supplierName: req.body.supplierName,
+      products: req.body.products
+    }
+    const doc = await Supplier.findOneAndUpdate({ supplierName: supplierName },update , {new: true, upsert: true, includeResultMetadata: true});
+    if (doc.value instanceof Supplier){
+      res.status(204).send(doc);
+    } else {
+      res.status(404).json(err || 'Supplier Name not found.');
+    }
+  } catch (err) {
+    res.status(500).json(err || 'Some error occurred while updating the supplier info.');
+  }
+};
+
+
+exports.deleteSupplier = async (req, res) => {
+  try {
+    const supplierName = req.params.supplierName;
+    if (!supplierName) {
+      res.status(400).send({ message: 'Invalid Supplier Name' });
+      return;
+    }
+    const doc = await Supplier.deleteOne({ supplierName: supplierName })
+    .then((result) => {
+      if (result.deletedCount> 0){
+        res.status(200).send(result);
+      } else{
+        res.status(404).send({ message: 'Supplier Name not found.' });
+      }
+    })
+    .catch((err) => {
+      res.status(500).send({
+        message: err.message || 'Some error occurred while deleting the supplier.'
+      });
+    });
+  } catch (err) {
+    res.status(500).json(err || 'Some error occurred while deleting the supplier.');
+  }
 };
