# routes/office.js
@@ -9,4 +9,8 @@ router.get('/:officeName', officeController.getOffice);
 
 router.post('/', officeController.createOffice);
 
+router.put('/:officeName', officeController.updateOffice);
+
+router.delete('/:officeName', officeController.deleteOffice);
+
 module.exports = router;
