# routes/supplier.js
@@ -9,4 +9,8 @@ router.get('/:supplierName', supplierController.getSupplier);
 
 router.post('/', supplierController.createSupplier);
 
+router.put('/:supplierName', supplierController.updateSupplier);
+
+router.delete('/:supplierName', supplierController.deleteSupplier);
+
 module.exports = router;
